adjust for announcement

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>รับน้องก้าวใหม่ ปีการศึกษา 2561 จุฬาลงกรณ์มหาวิทยาลัย</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src='https://www.google.com/recaptcha/api.js'></script>
   </head>
   <body>
     <div id="app"></div>
